--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@
         </div>
     </section>
 
-    <!-- teams section start -->
-    <section class="teams" id="teams">
+     <section class="teams" id="teams">
         <div class="max-width">
             <h2 class="title">My teams</h2>
             <div class="carousel owl-carousel">
@@ -176,7 +175,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="photo-1450133064473-71024230f91b.webp" alt="">
-                        <div class="text">Someone name<photo/div>
+                        <div class="text">Someone name</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
